force-app/main/default/objects/Penalty__c/Penalty__c.object-meta.xml
<CustomObject>
    <label>Penalty</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Penalty Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Penalties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>