force-app/main/default/objects/Penalty__c/fields/Exemption_Type_Link__c.field-meta.xml
<CustomField>
    <fullName>Exemption_Type_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exemption Type Link</label>
    <referenceTo>Exemption_Type_Link__c</referenceTo>
    <relationshipLabel>Penalties</relationshipLabel>
    <relationshipName>Penalties</relationshipName>
    <type>Lookup</type>
</CustomField>