force-app/main/default/objects/Penalty__c/fields/Penalty_Amount__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Amount__c</fullName>
    <label>Penalty Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>