force-app/main/default/objects/Penalty__c/fields/Penalty_Reference__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Reference__c</fullName>
    <label>Penalty Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>