force-app/main/default/objects/Penalty__c/fields/Penalty_Type__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Type__c</fullName>
    <label>Penalty Type</label>
    <referenceTo>Penalty_Type__c</referenceTo>
    <relationshipLabel>Penalties</relationshipLabel>
    <relationshipName>Penalties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>