force-app/main/default/objects/Penalty__c/fields/Property_Postcode_No_Spaces__c.field-meta.xml
<CustomField>
    <fullName>Property_Postcode_No_Spaces__c</fullName>
    <description>System field which strips spaces from postcode, used for public register searching.</description>
    <formula>IF(
  NOT(ISBLANK(Exemption__c)),
  Exemption__r.Property_Postcode_No_Spaces__c,
  SUBSTITUTE(PropertyPostcode__c, &quot; &quot;, &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>System field which strips spaces from postcode, used for public register searching.</inlineHelpText>
    <label>Property Postcode No Spaces</label>
    <type>Text</type>
</CustomField>