force-app/main/default/objects/Penalty__c/fields/Unpublish_Date__c.field-meta.xml
<CustomField>
    <fullName>Unpublish_Date__c</fullName>
    <label>Unpublish Date</label>
    <type>Date</type>
</CustomField>